helm-charts/k8s-nifi-cluster/kustomize/nifi/nifi.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    name: nifi
    app: nifi
  annotations:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi
spec:
  revisionHistoryLimit: 1
  serviceName: nifi
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      setHostnameAsFQDN: true
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: harbor-loild-nifi
      containers:
      - name: nifi
        image: harbor.baityapp.online/core/nifi:1.25.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 11443
          name: cluster
        - containerPort: 8443
          name: https
        - containerPort: 8441
          name: upload
        - containerPort: 6342
          name: cluster-lb
        volumeMounts:
          - name: nifi-temp
            mountPath: /opt/nifi/nifi-current/temp
          - name: nifi-scripts
            mountPath: /opt/nifi/nifi-current/scripts
          - name: nifi-lib
            mountPath: /opt/nifi/nifi-current/lib
          - name: nifi-logs
            mountPath: /opt/nifi/nifi-current/logs
          - name: nifi-data
            mountPath: /opt/nifi/nifi-current/data
          - name: nifi-flowfile
            mountPath: /opt/nifi/nifi-current/flowfile_repository
          - name: nifi-conf
            mountPath: /opt/nifi/nifi-current/conf
          - name: nifi-content
            mountPath: /opt/nifi/nifi-current/content_repository
          - name: nifi-upload
            mountPath: /opt/nifi/nifi-current/upload
          - name: nifi-provenance
            mountPath: /opt/nifi/nifi-current/provenance_repository
          - name: nifi-database
            mountPath: /opt/nifi/nifi-current/database_repository
          - name: nifi-extensions
            mountPath: /opt/nifi/nifi-current/extensions
          - name: nifi-keytool
            mountPath: /opt/nifi/nifi-current/keytool
          - name: scripts
            mountPath: /scripts/security.sh
            subPath: security.sh
            readOnly: false
        lifecycle:
          postStart:
            exec:
              command:
                - /scripts/security.sh
        livenessProbe:
          exec:
            command:
              - pgrep
              - java
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
            port: cluster
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            #cpu: 400m
            #memory: 2Gi
          limits:
            #cpu: 400m
            #memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
              - ALL
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 3Gi
        - name: nifi-scripts
          persistentVolumeClaim:
            claimName: nifi-scripts
        - name: nifi-lib
          persistentVolumeClaim:
            claimName: nifi-lib
        - name: nifi-logs
          persistentVolumeClaim:
            claimName: nifi-logs
        - name: nifi-temp
          persistentVolumeClaim:
            claimName: nifi-temp
        - name: nifi-data
          persistentVolumeClaim:
            claimName: nifi-data
        - name: nifi-flowfile
          persistentVolumeClaim:
            claimName: nifi-flowfile
        - name: nifi-conf
          persistentVolumeClaim:
            claimName: nifi-conf
        - name: nifi-content
          persistentVolumeClaim:
            claimName: nifi-content
        - name: nifi-upload
          persistentVolumeClaim:
            claimName: nifi-upload
        - name: nifi-provenance
          persistentVolumeClaim:
            claimName: nifi-provenance
        - name: nifi-database
          persistentVolumeClaim:
            claimName: nifi-database
        - name: nifi-extensions
          persistentVolumeClaim:
            claimName: nifi-extensions
        - name: nifi-keytool
          persistentVolumeClaim:
            claimName: nifi-keytool
        - name: scripts
          configMap:
            name: nifi-ssl-cm
            optional: false
            defaultMode: 0755
