helm-charts/k8s-nifi-cluster/kustomize/nifi/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  labels:
    app: nifi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    app.kubernetes.io/name: nifi
    app.kubernetes.io/part-of: nifi
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: nifi-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
spec:
  tls:
  - hosts:
    - nifi.baityapp.online
    secretName: nifi.baityapp.online-ssl
  rules:
  - host: nifi.baityapp.online
    http:
      paths:
      - path: /nifi/upload
        pathType: Prefix
        backend:
          service:
            name: nifi
            port:
              number: 8441
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nifi
            port:
              number: 8443
